[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ged4py"
version = "0.4.4"
requires-python = ">=3.11.0"
description = "GEDCOM tools for Python"
readme = "README.rst"
authors = [
  {name = "Andy Salnikov", email = "ged4py@py-dev.com"}
]
maintainers = [
  {name = "Andy Salnikov", email = "ged4py@py-dev.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Topic :: Sociology :: Genealogy',
]
license = {text = "MIT license"}
dependencies = [
    "ansel",
    "convertdate",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]
bugs = "https://github.com/andy-z/ged4py/issues"
homepage = "https://ged4py.readthedocs.io/"

[tool.setuptools]
packages = ["ged4py"]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = [
    "docs/conf.py",
]
